# neural-network

./: CMakeLists.txt  README.md  cuda_kernel.cu  main.cpp  tensors.cpp  tensors.h
.git_broken/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git_broken/logs/: HEAD
.git_broken/logs/refs/remotes/origin/: HEAD  main
.git_broken/objects/pack/: pack-abe133c799ae4f30eb3bec182343a77320287122.idx  pack-abe133c799ae4f30eb3bec182343a77320287122.pack  pack-abe133c799ae4f30eb3bec182343a77320287122.rev
models/: fashion-mnist.nn  mnist.nn
neural_network/: serialization.cpp  serialization.h  sgd.cpp  sgd.h  tensors.cpp  tensors.cu  tensors.h
neural_network/data/: dataloader.cpp  dataloader.h  datasets.cpp  datasets.h
neural_network/modules/: flatten.cpp  flatten.h  linear.cpp  linear.h  loss.cpp  loss.h  module.cpp  module.h  relu.cpp  relu.h  softmax.cpp  softmax.h
